log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Tue 28 Mar 2023 02:52:38 AM UTC: 
 tests:  0|6
total_score: 0/70
ef4a4af
Wed 29 Mar 2023 11:14:19 PM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4869b64
Wed 29 Mar 2023 11:14:37 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
877c577
Thu 30 Mar 2023 12:50:55 AM UTC: 
 arraylist.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  3|4
total_score: 20/70
76ef5de
Thu 30 Mar 2023 05:35:52 PM UTC: 
 arraylist.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:45:20: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   45 |             for(;u<size;u++){
      |                    ^~~~
      |                    dysize
arraylist.c:45:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5433fc5
